# Axiom

./: game.sh
bots/: test.py
clients/axiorem/: .gitignore  CMakeLists.txt
clients/axiorem/assets/: test.sim.json
clients/axiorem/src/: main.c
clients/axiorem/src/client/: sim_loader.c  sim_loader.h
clients/axiorem/src/render/: game_window.c  game_window.h  renderer.c  renderer.h  ui.c  ui.h
core/: go.mod
core/cmd/: main.go
core/internal/game/: config.go  game.go  state.go  ticks.go
core/internal/game/simulation/projectiles/: projectile.go
core/internal/game/simulation/units/: rules.go  states.go
core/internal/generators/: map.go  units.go
core/internal/mutations/: mutation.go
core/internal/objects/: object.go
core/internal/players/: player.go
core/internal/rules/: rulebooks.go
core/internal/tilemap/: generator.go  models.go  region.go
core/internal/units/: rules.go
player/: player.py
server/: go.mod  go.sum  main.go
server/cmd/server/: main.go
server/internal/game/: game.go  generator.go  models.go  properties.go  simulation.go
server/internal/handlers/: game.go
server/internal/routes/: route.go
server/internal/services/: service.go
